Fix drag on mobile
Thanks @kosirm for helping us track this down and provide a solution.
Closes #19

--- a/sass/layout-grid.sass
+++ b/sass/layout-grid.sass
@@ -57,6 +57,7 @@ $max-rows-lg: 10 !default
 
 .lt
     position: absolute
+    touch-action: none
 
 .lt-body
     position: absolute
